--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,13 @@
 :root {
   --primary: #d2b48c;
-  --spacing: 4rem;
-  --max-width: 960px;
   --dk-grey: #333;
+  --max-width: 960px;
+  --spacing: 4rem;
   --img-width: 350px;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 body {
@@ -20,9 +24,27 @@ header {
 }
 
 h1 {
+  margin-bottom: var(--spacing);
   font-size: 5vw;
+  font-weight: bold;
   line-height: 1.4em;
   margin-bottom: 2rem;
+}
+
+.button {
+  display: inline-block;
+  width: max-content;
+  color: var(--button-color);
+  font-weight: bold;
+  border: 2px solid var(--button-color);
+  text-decoration: none;
+  padding: 1rem;
+}
+
+.button:hover {
+  color: var(--button-hover-color);
+  background-color: var(--button-color);
+  transition: all 0.3s ease-in-out;
 }
 
 h2 {
@@ -70,22 +92,6 @@ footer {
   color: white;
 }
 
-.button {
-  display: inline-block;
-  width: max-content;
-  color: var(--button-color);
-  font-weight: bold;
-  border: 2px solid var(--button-color);
-  text-decoration: none;
-  padding: 1rem;
-}
-
-.button:hover {
-  color: var(--button-hover-color);
-  background-color: var(--button-color);
-  transition: all 0.3s ease-in-out;
-}
-
 .about {
   position: relative;
   margin-bottom: 100px;
@@ -94,9 +100,24 @@ footer {
   padding: var(--spacing);
 }
 
+.about::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  bottom: -100px;
+  width: 0;
+  height: 0;
+  border-top: 100px solid var(--primary);
+  border-right: 100vw solid transparent;
+}
+
 .about-container {
   max-width: 960px;
   margin: 0 auto;
+}
+
+.about-img {
+  max-width: 350px;
 }
 
 @media (min-width: 800) {
@@ -105,6 +126,18 @@ footer {
   }
   .about-text {
     margin-left: var(--spacing);
+  }
+  .about-img {
+    display: block;
+    width: 100%;
+    max-width: 350px;
+    margin: 0 auto var(--spacing);
+  }
+  .article-img {
+    display: block;
+    width: 100%;
+    max-width: 350px;
+    margin: 0 auto var(--spacing);
   }
 }
 
@@ -133,6 +166,18 @@ footer {
   --button-hover-color: var(--primary);
 }
 
+article {
+  display: flex;
+  flex-direction: row;
+}
+
+.article-img {
+  display: block;
+  width: 100%;
+  min-width: 450px;
+  margin: 0 auto var(--spacing);
+}
+
 @media (min-width: 800) {
   article {
     flex-direction: row;
@@ -146,19 +191,21 @@ footer {
   }
 }
 
-article {
-  display: flex;
-  flex-direction: column-reverse;
-}
-
-.article-img {
-  margin-bottom: 2rem;
-}
-
 .contact {
   position: relative;
   margin-top: 100px;
   text-align: center;
+}
+
+.contact::before {
+  content: "";
+  position: absolute;
+  right: 0;
+  top: -100px;
+  width: 0;
+  height: 0;
+  border-bottom: 100px solid var(--primary);
+  border-left: 100vw solid transparent;
 }
 
 .social {
